# adagiovanni

./: .conform.yaml  .dockerignore  .env.example  .flake8  .gitignore  .license-header.txt  .pre-commit-config.yaml  ASSUMPTIONS.md  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  dev-requirements.txt  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py  start_server.py
.github/: pull_request_template.md
.github/workflows/: ci.yaml
src/adagiovanni/: __init__.py  db.py  logging_config.yaml  main.py
src/adagiovanni/api/routes/: __init__.py  home.py  ping.py
src/adagiovanni/api/v1/: __init__.py  home.py  order.py  ping.py  schedule.py
src/adagiovanni/core/: config.py
src/adagiovanni/crud/: order.py  schedule.py
src/adagiovanni/models/: __init__.py  _mixin.py  menu.py  order.py  schedule.py
tests/: test_adagiovanni_api_v1.py  test_poetry_template_repo.py  util.py
tests/integration/: conftest.py  test_api_v1.py
tests/unit/: conftest.py  test_api_v1.py  test_main_app.py
