[tool.poetry]
name = "adagiovanni"
version = "0.1.0"
description = "A FastAPI backend for Giovanni to run his sandwich shop"
authors = ["Bernard Cooke <bernard-cooke@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.74.0"
uvicorn = "^0.17.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
bandit = "^1.7.2"
mypy = "0.931"
black = "^22.1.0"
safety = "^1.10.3"
flake8 = "^4.0.1"
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src"]
combine_as_imports = true

[tool.bandit]
targets = ["src"]


[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "import-error",
]


[tool.mypy]
python_version=3.8

mypy_path="src"

show_column_numbers=true
show_error_context=true
pretty=true
error_summary=true

follow_imports="normal"
ignore_missing_imports=true

disallow_untyped_calls=true
warn_return_any=true
strict_optional=true
warn_no_return=true
warn_redundant_casts=true
warn_unused_ignores=true
warn_unused_configs=true
disallow_any_generics=true

warn_unreachable=true
disallow_untyped_defs=true
check_untyped_defs=true

cache_dir="/dev/null"
